// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataops-databrew Snapshot Tests DataBrew App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-databrew-main": {
    "Description": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:dataset:mdaacatalogdataset:mdaa-catalog-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:recipe:mdaacatalogrecipe:mdaa-catalog-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:dataset:mdaaexceldataset:mdaa-excel-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-excel-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:dataset:mdaajdbcdataset:mdaa-jdbc-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:recipe:mdaajdbcrecipe:mdaa-jdbc-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:dataset:mdaajsondataset:mdaa-json-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-json-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:dataset:mdaas3dataset:mdaa-s3-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:recipe:mdaas3recipe:mdaa-s3-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:schedule:mdaatestjobschedule:mdaa-test-job-schedule",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-job-schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:schedule:mdaatestprofileschedule:mdaa-test-profile-schedule",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-profile-schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:project:mdaatestproject:mdaa-test-project",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-project",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:project:orgdevdataopsdatabrewmdaas3recipe:mdaa-test-project",
        },
        "Value": "org-dev-data-ops-databrew-mdaa-s3-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:project:testorgtestenvtestdomaintestdatabrewmainmdaajdbcdataset:mdaa-test-project",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:job:testprofilejob:test-profile-job",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-test-profile-job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:job:testrecipejobgenerated:test-recipe-job-generated",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-generated",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-main:job:testrecipejobs3:test-recipe-job-s3",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-s3",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_bucket_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_kms_arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_role_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectconnectionsconnectionJdbcC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/connections/connectionJdbc",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectdatabaseNamedemodatabaseC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/databaseName/demo-database",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectdeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectkmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "RoleRestestrecipejobgeneratedexecutionRole": {
        "DeletionPolicy": "Delete",
        "Properties": {
          "ServiceToken": {
            "Ref": "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "roleRef": {
            "arn": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":iam::",
                  {
                    "Ref": "AWS::AccountId",
                  },
                  ":role/test-execution-role",
                ],
              ],
            },
            "refId": "test-recipe-job-generated-executionRole",
          },
        },
        "Type": "AWS::CloudFormation::CustomResource",
        "UpdateReplacePolicy": "Delete",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-databrew-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "DataCatalogInputDefinition": {
              "CatalogId": {
                "Ref": "AWS::AccountId",
              },
              "DatabaseName": {
                "Ref": "SsmParameterValuetestorgtestdomainglueprojectdatabaseNamedemodatabaseC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "TableName": "demo_raw_data",
              "TempDirectory": {
                "Bucket": {
                  "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "Key": "tmp/catalog/",
              },
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/dataset/mdaa-catalog-dataset/mdaa-catalog-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames employee_id column back to id for catalog sources",
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "employee_id",
                  "targetColumn": "id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/recipe/mdaa-catalog-recipe/mdaa-catalog-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-catalog-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Format": "EXCEL",
          "FormatOptions": {
            "Excel": {
              "HeaderRow": true,
              "SheetIndexes": [
                0,
                1,
              ],
              "SheetNames": [
                "Sheet1",
                "Summary",
              ],
            },
          },
          "Input": {
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Key": "data/raw_data/input_data.xlsx",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-excel-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/dataset/mdaa-excel-dataset/mdaa-excel-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-excel-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "DatabaseInputDefinition": {
              "DatabaseTableName": "mydb_admin.allusers",
              "GlueConnectionName": {
                "Ref": "SsmParameterValuetestorgtestdomainglueprojectconnectionsconnectionJdbcC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "QueryString": "SELECT * FROM mydb_admin.allusers WHERE active = true",
              "TempDirectory": {
                "Bucket": {
                  "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "Key": "tmp/jdbc/",
              },
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/dataset/mdaa-jdbc-dataset/mdaa-jdbc-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames id column to employee_id for JDBC sources",
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "id",
                  "targetColumn": "employee_id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/recipe/mdaa-jdbc-recipe/mdaa-jdbc-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Format": "JSON",
          "FormatOptions": {
            "Json": {
              "MultiLine": true,
            },
          },
          "Input": {
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Key": "data/raw_data/input_data.json",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-json-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/dataset/mdaa-json-dataset/mdaa-json-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-json-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Format": "CSV",
          "FormatOptions": {
            "Csv": {
              "Delimiter": ",",
              "HeaderRow": true,
            },
          },
          "Input": {
            "Metadata": {
              "SourceArn": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":appflow:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":flow/my-flow",
                  ],
                ],
              },
            },
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "BucketOwner": {
                "Ref": "AWS::AccountId",
              },
              "Key": "data/raw_data/input_data.csv",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-dataset",
          "PathOptions": {
            "FilesLimit": {
              "MaxFiles": 100,
              "Order": "DESCENDING",
              "OrderedBy": "LAST_MODIFIED_DATE",
            },
            "LastModifiedDateCondition": {
              "Expression": "starts_with :prefix1",
              "ValuesMap": [
                {
                  "Value": "2024",
                  "ValueReference": ":prefix1",
                },
              ],
            },
            "Parameters": [
              {
                "DatasetParameter": {
                  "CreateColumn": true,
                  "DatetimeOptions": {
                    "Format": "yyyy-MM-dd",
                    "LocaleCode": "en-US",
                    "TimezoneOffset": "+00:00",
                  },
                  "Filter": {
                    "Expression": "starts_with :prefix1",
                    "ValuesMap": [
                      {
                        "Value": "2024",
                        "ValueReference": ":prefix1",
                      },
                    ],
                  },
                  "Name": "date_partition",
                  "Type": "Datetime",
                },
                "PathParameterName": "date_partition",
              },
            ],
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/dataset/mdaa-s3-dataset/mdaa-s3-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames employee_id column back to id for S3 sources",
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "employee_id",
                  "targetColumn": "id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/recipe/mdaa-s3-recipe/mdaa-s3-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "CronExpression": "Cron(50 21 * * ? *)",
          "JobNames": [
            "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-s3",
          ],
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-job-schedule",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/schedule/mdaa-test-job-schedule/mdaa-test-job-schedule",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-job-schedule",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "CronExpression": "Cron(50 21 * * ? *)",
          "JobNames": [
            "test-org-test-env-test-domain-test-databrew-main-test-profile-job",
          ],
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-profile-schedule",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/schedule/mdaa-test-profile-schedule/mdaa-test-profile-schedule",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-profile-schedule",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
          "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-project",
          "RecipeName": "org-dev-data-ops-databrew-mdaa-s3-recipe",
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Project",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/project/mdaa-test-project/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-project",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/project/org-dev-data-ops-databrew-mdaa-s3-recipe/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "org-dev-data-ops-databrew-mdaa-s3-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/project/test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "test-org-test-env-test-domain-test-databrew-main-mdaa-jdbc-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "JobSample": {
            "Mode": "CUSTOM_ROWS",
            "Size": 5000,
          },
          "LogSubscription": "ENABLE",
          "MaxCapacity": 3,
          "MaxRetries": 2,
          "Name": "test-org-test-env-test-domain-test-databrew-main-test-profile-job",
          "OutputLocation": {
            "Bucket": {
              "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "BucketOwner": {
              "Ref": "AWS::AccountId",
            },
            "Key": "data/databrew/profile/",
          },
          "ProfileConfiguration": {
            "ColumnStatisticsConfigurations": [
              {
                "Selectors": [
                  {
                    "Name": "employee_id",
                  },
                ],
                "Statistics": {
                  "IncludedStatistics": [
                    "MEAN",
                    "STANDARD_DEVIATION",
                  ],
                  "Overrides": [
                    {
                      "Parameters": {},
                      "Statistic": "MEAN",
                    },
                  ],
                },
              },
            ],
            "DatasetStatisticsConfiguration": {
              "IncludedStatistics": [
                "CORRELATION",
                "DUPLICATE_ROWS_COUNT",
              ],
              "Overrides": [
                {
                  "Parameters": {},
                  "Statistic": "CORRELATION",
                },
              ],
            },
            "EntityDetectorConfiguration": {
              "AllowedStatistics": {
                "Statistics": [
                  "ROW_COUNT",
                  "DUPLICATE_ROWS_COUNT",
                ],
              },
              "EntityTypes": [
                "EMAIL",
                "PHONE_NUMBER",
                "USA_SSN",
              ],
            },
            "ProfileColumns": [
              {
                "Name": "employee_id",
              },
              {
                "Regex": ".*_date$",
              },
            ],
          },
          "RoleArn": "databrew-execution-role",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Timeout": 60,
          "Type": "PROFILE",
          "ValidationConfigurations": [
            {
              "RulesetArn": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":databrew:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":ruleset/my-ruleset",
                  ],
                ],
              },
              "ValidationMode": "CHECK_ALL",
            },
          ],
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/job/test-profile-job/test-profile-job",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-test-profile-job",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "org-dev-data-ops-databrew-mdaa-jdbc-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-generated",
          "Outputs": [
            {
              "Format": "CSV",
              "Location": {
                "Bucket": {
                  "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "Key": "data/databrew/generated-output/",
              },
              "Overwrite": true,
            },
          ],
          "Recipe": {
            "Name": "test-org-test-env-test-domain-test-databrew-main-mdaa-s3-recipe",
            "Version": "",
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "RoleRestestrecipejobgeneratedexecutionRole",
              "name",
            ],
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "RECIPE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/job/test-recipe-job-generated/test-recipe-job-generated",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-generated",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "LogSubscription": "ENABLE",
          "MaxCapacity": 5,
          "MaxRetries": 3,
          "Name": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-s3",
          "Outputs": [
            {
              "CompressionFormat": "SNAPPY",
              "Format": "PARQUET",
              "FormatOptions": {
                "Csv": {
                  "Delimiter": ",",
                },
              },
              "Location": {
                "Bucket": {
                  "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "Key": "data/databrew/transformed/",
              },
              "MaxOutputFiles": 10,
              "Overwrite": true,
              "PartitionColumns": [
                "id",
              ],
            },
          ],
          "ProjectName": "test-org-test-env-test-domain-test-databrew-main-mdaa-test-project",
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Timeout": 120,
          "Type": "RECIPE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-main/job/test-recipe-job-s3/test-recipe-job-s3",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-main-test-recipe-job-s3",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-databrew Snapshot Tests DataBrew App Dboutputs App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-databrew-dboutputs": {
    "Description": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-dboutputs:dataset:mdaadbdataset:mdaa-db-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-dboutputs:recipe:mdaadbrecipe:mdaa-db-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-dboutputs:job:testcatalogoutputjob:test-catalog-output-job",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-test-catalog-output-job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-dboutputs:job:testdatabaseoutputjob:test-database-output-job",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-test-database-output-job",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_bucket_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_kms_arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_role_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectconnectionsconnectionJdbcC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/connections/connectionJdbc",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectdeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectkmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomainglueprojectsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/glue-project/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-databrew-dboutputs/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-dboutputs",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Key": "data/raw_data/input_data.csv",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-dboutputs",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-dboutputs/dataset/mdaa-db-dataset/mdaa-db-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-dboutputs",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Recipe for database output testing",
          "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "id",
                  "targetColumn": "employee_id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-dboutputs",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-dboutputs/recipe/mdaa-db-recipe/mdaa-db-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-dboutputs",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DataCatalogOutputs": [
            {
              "CatalogId": {
                "Ref": "AWS::AccountId",
              },
              "DatabaseName": "my_output_database",
              "DatabaseOptions": {
                "TableName": "output_table_prefix",
                "TempDirectory": {
                  "Bucket": {
                    "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "Key": "tmp/catalog-output/",
                },
              },
              "Overwrite": true,
              "S3Options": {
                "Location": {
                  "Bucket": {
                    "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "Key": "data/databrew/catalog-output/",
                },
              },
              "TableName": "my_output_table",
            },
          ],
          "DatasetName": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-test-catalog-output-job",
          "Recipe": {
            "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-recipe",
            "Version": "",
          },
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-dboutputs",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "RECIPE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-dboutputs/job/test-catalog-output-job/test-catalog-output-job",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-dboutputs",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-test-catalog-output-job",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatabaseOutputs": [
            {
              "DatabaseOptions": {
                "TableName": "output_table_prefix",
                "TempDirectory": {
                  "Bucket": {
                    "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                  },
                  "Key": "tmp/db-output/",
                },
              },
              "DatabaseOutputMode": "NEW_TABLE",
              "GlueConnectionName": {
                "Ref": "SsmParameterValuetestorgtestdomainglueprojectconnectionsconnectionJdbcC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
            },
          ],
          "DatasetName": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-test-database-output-job",
          "Recipe": {
            "Name": "test-org-test-env-test-domain-test-databrew-dboutputs-mdaa-db-recipe",
            "Version": "",
          },
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-dboutputs",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "RECIPE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-dboutputs/job/test-database-output-job/test-database-output-job",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-dboutputs",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-dboutputs-test-database-output-job",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-databrew Snapshot Tests DataBrew App Minimal App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-databrew-minimal": {
    "Description": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-minimal:dataset:mydataset:my-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-minimal-my-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-minimal:job:myprofilejob:my-profile-job",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-minimal-my-profile-job",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_bucket_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_kms_arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampledeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplekmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsampleprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojectsamplesecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-sample/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-databrew-minimal/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Format": "CSV",
          "Input": {
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Key": "data/input/",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-minimal-my-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-minimal/dataset/my-dataset/my-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-minimal-my-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "test-org-test-env-test-domain-test-databrew-minimal-my-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-minimal-my-profile-job",
          "RoleArn": "glue-role",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "PROFILE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-minimal/job/my-profile-job/my-profile-job",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-minimal-my-profile-job",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-databrew Snapshot Tests DataBrew App Noproject App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-databrew-noproject": {
    "Description": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:dataset:mdaacatalogdataset:mdaa-catalog-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:recipe:mdaacatalogrecipe:mdaa-catalog-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:dataset:mdaajdbcdataset:mdaa-jdbc-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:recipe:mdaajdbcrecipe:mdaa-jdbc-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:dataset:mdaas3dataset:mdaa-s3-dataset",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:recipe:mdaas3recipe:mdaa-s3-recipe",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:schedule:mdaatestjobschedule:mdaa-test-job-schedule",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-job-schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:schedule:mdaatestprofileschedule:mdaa-test-profile-schedule",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-profil--1c329f80",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:project:mdaatestproject:mdaa-test-project",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-project",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:project:orgdevdataopsdatabrewmdaas3recipe:mdaa-test-project",
        },
        "Value": "org-dev-data-ops-databrew-mdaa-s3-recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:project:testorgtestenvtestdomaintestdatabrewnoprojectmdaajdbcdataset:mdaa-test-project",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:job:testprofilejob:test-profile-job",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-test-profile-job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-databrew-noproject:job:testrecipejob6:test-recipe-job6",
        },
        "Value": "test-org-test-env-test-domain-test-databrew-noproject-test-recipe-job6",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_bucket_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_kms_arn",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/path_to_role_name",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-databrew-noproject/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-databrew) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "DataCatalogInputDefinition": {
              "DatabaseName": "project:databaseName/demo-database",
              "TableName": "demo_raw_data",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/dataset/mdaa-catalog-dataset/mdaa-catalog-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames employee_id column back to id for catalog sources",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "employee_id",
                  "targetColumn": "id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/recipe/mdaa-catalog-recipe/mdaa-catalog-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-catalog-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "DatabaseInputDefinition": {
              "DatabaseTableName": "mydb_admin.allusers",
              "GlueConnectionName": "project:connections/connectionJdbc",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/dataset/mdaa-jdbc-dataset/mdaa-jdbc-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames id column to employee_id",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "id",
                  "targetColumn": "employee_id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/recipe/mdaa-jdbc-recipe/mdaa-jdbc-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Input": {
            "S3InputDefinition": {
              "Bucket": {
                "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Key": "data/raw_data/input_data.csv.snappy",
            },
          },
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-dataset",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Dataset",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/dataset/mdaa-s3-dataset/mdaa-s3-dataset",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Renames employee_id column back to id",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-recipe",
          "Steps": [
            {
              "Action": {
                "Operation": "RENAME",
                "Parameters": {
                  "sourceColumn": "employee_id",
                  "targetColumn": "id",
                },
              },
            },
          ],
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Recipe",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/recipe/mdaa-s3-recipe/mdaa-s3-recipe",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-s3-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "CronExpression": "Cron(50 21 * * ? *)",
          "JobNames": [
            "test-org-test-env-test-domain-test-databrew-noproject-test-recipe-job6",
          ],
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-job-schedule",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/schedule/mdaa-test-job-schedule/mdaa-test-job-schedule",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-job-schedule",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "CronExpression": "Cron(50 21 * * ? *)",
          "JobNames": [
            "test-org-test-env-test-domain-test-databrew-noproject-test-profile-job",
          ],
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-profil--1c329f80",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Schedule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/schedule/mdaa-test-profile-schedule/mdaa-test-profile-schedule",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-profil--1c329f80",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-project",
          "RecipeName": "org-dev-data-ops-databrew-mdaa-s3-recipe",
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::DataBrew::Project",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/project/mdaa-test-project/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-project",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/project/org-dev-data-ops-databrew-mdaa-s3-recipe/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "org-dev-data-ops-databrew-mdaa-s3-recipe",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/project/test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset/mdaa-test-project",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "DatasetName": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-jdbc-dataset",
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-test-profile-job",
          "OutputLocation": {
            "Bucket": {
              "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
            "Key": "data/databrew/profile/",
          },
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "PROFILE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/job/test-profile-job/test-profile-job",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-test-profile-job",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "EncryptionKeyArn": {
            "Ref": "SsmParameterValuepathtokmsarnC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "EncryptionMode": "SSE-KMS",
          "Name": "test-org-test-env-test-domain-test-databrew-noproject-test-recipe-job6",
          "Outputs": [
            {
              "CompressionFormat": "SNAPPY",
              "Format": "PARQUET",
              "Location": {
                "Bucket": {
                  "Ref": "SsmParameterValuepathtobucketnameC96584B6F00A464EAD1953AFF4B05118Parameter",
                },
                "Key": "data/databrew/transformed/",
              },
              "Overwrite": true,
              "PartitionColumns": [
                "id",
              ],
            },
          ],
          "ProjectName": "test-org-test-env-test-domain-test-databrew-noproject-mdaa-test-project",
          "RoleArn": {
            "Ref": "SsmParameterValuepathtorolenameC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-databrew",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-databrew-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Type": "RECIPE",
        },
        "Type": "AWS::DataBrew::Job",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-databrew-noproject/job/test-recipe-job6/test-recipe-job6",
          "Tags": {
            "mdaa_cdk_app": "dataops-databrew",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-databrew-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-databrew-noproject-test-recipe-job6",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;
